[package]
name = "the_cukeinator"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/The-Cukeinator"
repository = "https://github.com/Steelstone3/The-Cukeinator"
license = "GPLv3"
readme = "README.md"
include = [

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cucumber = "0.15.2"
inquire = "0.4.0"